--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,3 +1,15 @@
 ﻿@{
-    Layout = "_Layout";
+    var controller = ViewContext.RouteData.Values["controller"].ToString().ToLower();
+    string cLayout = "";
+    
+    if (controller == "webmaster")
+    {
+        cLayout = "~/Views/Shared/_WebmasterLayout.cshtml";
+    }
+    else
+    {
+        cLayout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    Layout = cLayout;
 }
