Navbar man almost done

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -97,9 +97,8 @@
           </li>
 
           <li class="nav-item dropdown">
-            <button id="font-down" class="btn btn-outline-primary waves-effect btn-font-size">A-</button>
-            <button id="font-up" class="btn-font-size btn-floating btn-sm blue-gradient">A+</button>
-            <a class="btn-floating btn-sm blue-gradient"><i class="fa fa-star"></i></a>
+            <button type="button" class="btn btn-rounded blue-gradient btn-font-size">A-</button>
+            <button type="button" class="btn btn-rounded blue-gradient btn-font-size">A+</button>
           </li>
             
         </ul>
