--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -26,13 +26,18 @@
       <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
+
+
+<div class="form-check mt-3 mb-3">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheckbox1">
+    <label class="form-check-label" for="defaultCheckbox1">
+        Keep me logged in
+    </label>
+</div>
+                
+
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+      <p class="mt-5 mb-3 text-muted">&copy; Book Cave 2018</p>
   </form>
 
   <script type="text/javascript" src="~/lib/mdb/js/jquery-3.2.1.min.js"></script>
