--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title><!--@ViewBag.Title-->Hey Guy</title>
+    <title>@ViewBag.PageTitle</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/lib/mdb/css/bootstrap.min.css" />
@@ -19,7 +19,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="https://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">
+      <a class="navbar-brand" href="#">
         <div class="imgcontainer" >
           <img src="~/images/logo.png" alt="Book Cave logo">
         </div>
@@ -96,9 +96,11 @@
             </div>
           </li>
 
-          <li class="nav-item dropdown">
-            <button type="button" class="btn btn-rounded blue-gradient btn-font-size">A-</button>
-            <button type="button" class="btn btn-rounded blue-gradient btn-font-size">A+</button>
+          <li class="nav-item">
+            <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                <button type="button" class="btn blue-gradient btn-rounded">A -</button>
+                <button type="button" class="btn blue-gradient btn-rounded">A+</button>
+            </div>
           </li>
             
         </ul>
