--- a/Views/Manage/Shared/_header.cshtml
+++ b/Views/Manage/Shared/_header.cshtml
@@ -1,74 +1,42 @@
-<!-- SideNav slide-out button -->
-<a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse"><i class="fa fa-bars"></i></a>
+ <!-- SideNav slide-out button -->
+  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse">
+      <i class="fa fa-bars"></i>
+  </a>
 
-<!-- Sidebar navigation -->
-<div id="slide-out" class="side-nav fixed">
-<ul class="custom-scrollbar">
-    <!-- Logo -->
-    <li>
-        <div class="logo-wrapper waves-light">
-            <a href="#"><img src="~/images/logo.png" class="img-fluid flex-center"></a>
-        </div>
-    </li>
-    <!--/. Logo -->
-    <!-- Side navigation links -->
-    <li>
-        <ul class="collapsible collapsible-accordion">
-            <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-chevron-right"></i> Submit blog<i class="fa fa-angle-down rotate-icon"></i></a>
-                <div class="collapsible-body">
-                    <ul>
-                        <li><a href="#" class="waves-effect">Submit listing</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Registration form</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-hand-pointer-o"></i> Instruction<i class="fa fa-angle-down rotate-icon"></i></a>
-                <div class="collapsible-body">
-                    <ul>
-                        <li><a href="#" class="waves-effect">For bloggers</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">For authors</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-eye"></i> About<i class="fa fa-angle-down rotate-icon"></i></a>
-                <div class="collapsible-body">
-                    <ul>
-                        <li><a href="#" class="waves-effect">Introduction</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Monthly meetings</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-envelope-o"></i> Contact me<i class="fa fa-angle-down rotate-icon"></i></a>
-                <div class="collapsible-body">
-                    <ul>
-                        <li><a href="#" class="waves-effect">FAQ</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Write a message</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">FAQ</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Write a message</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">FAQ</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Write a message</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">FAQ</a>
-                        </li>
-                        <li><a href="#" class="waves-effect">Write a message</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </li>
-    <!--/. Side navigation links -->
-</ul>
-</div>
-<!--/. Sidebar navigation -->
+
+
+  <!-- Sidebar navigation -->
+  <div id="slide-out" class="side-nav fixed sn-bg-2">
+      <ul class="custom-scrollbar list-unstyled">
+          
+          <li class="text-center mt-4 mb-5 p-5" ><a href="#" class="pl-0" ><img  class="img-fluid" src="~/images/logo.png" alt="book cave logo"></a></li>
+          
+          <li class="mt-5">
+            <ul class="collapsible collapsible-accordion">
+                <li><a class="collapsible-header waves-effect arrow-r"><i class="fa fa-book"></i> Books<i class="fa fa-angle-down rotate-icon"></i></a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li><a asp-controller="manage" asp-action="addbook" class="waves-effect">Add books</a>
+                            </li>
+                            <li><a asp-controller="manage" asp-action="viewbooks" class="waves-effect">View books</a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a asp-controller="manage" asp-action="orders" class="collapsible-header waves-effect "><i class="fa fa-bar-chart"></i>Orders</a></li>
+                <li><a asp-controller="manage" asp-action="stock" class="collapsible-header waves-effect"><i class="fa fa-stack-overflow"></i> Stock</a></li>
+            </ul>
+        </li>
+
+        <li class="fixed-bottom">
+            <ul class="collapsible collapsible-accordion">
+                <li><a asp-controller="manage" asp-action="changepassword" class="collapsible-header waves-effect"><i class="fa fa-magic"></i> Change password</a></li>
+                <li><a class="collapsible-header waves-effect red darken-4" href="#"><i class="fa fa-sign-out"></i> Sign out</a></li>
+            </ul>
+        </li>
+        
+      </ul>
+
+       <div class="sidenav-bg mask-strong"></div>
+  </div>
+
