--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -4,7 +4,7 @@
 
             <div class="row">
                 <div class="col-sm-6 offset-sm-3 text-center">
-                    <h1 class="display-1"><strong>Welcome To the Book Cave Managing Panel!</strong></h1>
+                    <h1 class="display-3"><strong>Welcome To the Book Cave Management Panel!</strong></h1>
                 </div>
             </div>
 
