Added some more Models

--- a/Views/Manage/Login.cshtml
+++ b/Views/Manage/Login.cshtml
@@ -1,5 +1,6 @@
 @{
   Layout = "";
+  // This page has its own style, therefore just made it as a standalone Layout.
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/lib/mdb/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/mdb/css/mdb.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/managelogin.css" />
 
 </head>
@@ -44,7 +44,6 @@
   <script type="text/javascript" src="~/lib/mdb/js/popper.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/mdb.min.js"></script>
-  <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
 
 </body>
 </html>
