--- a/Views/Manage/AddEmployee.cshtml
+++ b/Views/Manage/AddEmployee.cshtml
@@ -1,13 +1,13 @@
-
+@model BookCave.Models.InputModels.EmployeeLoginInputModel
 
 <section>
-    <form>
+    <form asp-action="AddEmployee" asp-controller="Manage">
         <!-- Grid row -->
         <div class="form-group row">
             <!-- Default input -->
             <label for="inputUsername" class="col-sm-2 col-form-label-lg">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control form-control-lg" id="inputUsername" placeholder="Username">
+                <input type="text" asp-for="Email" class="form-control form-control-lg" id="inputUsername" placeholder="Username">
             </div>
         </div>
         <!-- Grid row -->
@@ -17,7 +17,7 @@
             <!-- Default input -->
             <label for="inputPassword" class="col-sm-2 col-form-label-lg">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control form-control-lg" id="inputPassword" placeholder="Password">
+                <input type="text" asp-for="Password" class="form-control form-control-lg" id="inputPassword" placeholder="Password">
             </div>
         </div>
         <!-- Grid row -->
