--- a/Views/Manage/Login.cshtml
+++ b/Views/Manage/Login.cshtml
@@ -3,6 +3,8 @@
   // This page has its own style, therefore just made it as a standalone Layout.
 }
 
+@model BookCave.Models.InputModels.EmployeeRegisterInputModel
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,26 +21,37 @@
 </head>
 <body class="text-center">
 
-  <form class="form-signin">
-    <img class="mb-4" src="~/images/logo.png" alt="site-logo" width="200" height="200">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="inputUsername" class="sr-only">Username</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+    <form asp-action="Login" asp-controller="Manage" class="form-signin">
+        <img class="mb-4" src="~/images/logo.png" alt="site-logo" width="200" height="200">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
 
-<div class="form-check mt-3 mb-3">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheckbox1">
-    <label class="form-check-label" for="defaultCheckbox1">
-        Keep me logged in
-    </label>
-</div>
-                
+        <label for="inputUsername" class="sr-only">Username / Email</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
 
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; Book Cave 2018</p>
-  </form>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+
+        <div class="form-check mt-3 mb-3">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheckbox1">
+            <label class="form-check-label" for="defaultCheckbox1">
+                Remember Me
+            </label>
+        </div>
+            
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; Book Cave 2018</p>
+    </form>
+
+
+
+
+
+
+
 
   <script type="text/javascript" src="~/lib/mdb/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/popper.min.js"></script>
