--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,11 +15,28 @@
 </head>
 <body>
 
-  @await Html.PartialAsync("_header.cshtml")
+  <!-- Render header (special header for HomeController) -->
+  @{
+    var controller = ViewContext.RouteData.Values["controller"].ToString().ToLower();
+    
+    if (controller == "home")
+    {
+        @await Html.PartialAsync("_headerFrontPage.cshtml");
+    }
+    else
+    {
+        @await Html.PartialAsync("_header.cshtml");
+    }
+
+  }
+
+  <!-- Render Body -->
   @RenderBody()
+
+  <!-- Render footer -->
   @await Html.PartialAsync("_footer.cshtml")
    
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="~/lib/mdb/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/popper.min.js"></script>
   <script type="text/javascript" src="~/lib/mdb/js/bootstrap.min.js"></script>
