--- a/Views/Shared/_footer.cshtml
+++ b/Views/Shared/_footer.cshtml
@@ -1,12 +1,12 @@
 <!--Footer-->
-  <footer class="page-footer font-small mdb-color lighten-3 pt-4 mt-4 wow fadeIn">
+  <footer class="page-footer font-small unique-color-dark lighten-3 pt-4 mt-4 wow fadeIn">
 
       <!--Footer Links-->
       <div class="container text-center text-md-left">
           <div class="row my-4">
 
               <!--First column-->
-              <div class="col-md-2 col-lg-1 ml-auto">
+              <div class="col-md-3 col-lg-3 ml-auto">
                   <h5 class="text-uppercase mb-4 font-weight-bold">company</h5>
                   <ul class="list-unstyled">
                       <p>
@@ -25,7 +25,7 @@
               <hr class="clearfix w-100 d-md-none">
 
               <!--Second column-->
-              <div class="col-md-2 col-lg-2 ml-auto">
+              <div class="col-md-3 col-lg-3 ml-auto">
                   <h5 class="text-uppercase mb-4 font-weight-bold">About</h5>
                   <ul class="list-unstyled">
                       <p>
@@ -47,7 +47,7 @@
               <hr class="clearfix w-100 d-md-none">
 
               <!--Third column-->
-              <div class="col-md-4 col-lg-3">
+              <div class="col-md-3 col-lg-3">
                   <h5 class="text-uppercase mb-4 font-weight-bold">Payment Information</h5>
                   <!--Info-->
                   <img class="payment-img" src="~/images/payments.jpg" alt="accepted payments are: Paypal and all assosiated cards, like American Express, Visa. Master Card and Discover Network">
@@ -57,7 +57,7 @@
               <hr class="clearfix w-100 d-md-none">
 
               <!--Fourth column-->
-              <div class="col-md-2 col-lg-2 text-center">
+              <div class="col-md-3 col-lg-3 text-center">
                   <h5 class="text-uppercase mb-4 font-weight-bold">Follow Us</h5>
                   <!--Social buttons-->
                   <div class="mt-2">
