--- a/Views/Shared/_headerFrontPage.cshtml
+++ b/Views/Shared/_headerFrontPage.cshtml
@@ -1,5 +1,5 @@
  <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar unique-color-dark">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar rgba-black-strong">
     <div class="container">
 
       <!-- Brand -->
