--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>@ViewBag.PageTitle</title>
-
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/lib/mdb/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/mdb/css/mdb.min.css" />
@@ -19,7 +19,7 @@
         @await Html.PartialAsync("_header.cshtml")
     </header>
 
-    <main>
+    <main class="pt-0">
         @RenderBody()
     </main>
 
