--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -4,8 +4,7 @@
     <div class="row">
         <div class="col-5 mx-auto">
             <!-- Sign In-->
-            <section class="form-dark">
-
+            <section class="form-dark wow fadeIn">
                 <!-- Form -->
                 <form action="post">
                     <div class="card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table7.jpg'); width: 28rem;">
