--- a/Views/Manage/AddEmployee.cshtml
+++ b/Views/Manage/AddEmployee.cshtml
@@ -1,35 +1,35 @@
 @model BookCave.Models.InputModels.EmployeeLoginInputModel
 
-<section>
-    <form asp-action="AddEmployee" asp-controller="Manage">
-        <!-- Grid row -->
-        <div class="form-group row">
-            <!-- Default input -->
-            <label for="inputUsername" class="col-sm-2 col-form-label-lg">Username</label>
-            <div class="col-sm-10">
-                <input type="text" asp-for="Email" class="form-control form-control-lg" id="inputUsername" placeholder="Username">
-            </div>
-        </div>
-        <!-- Grid row -->
 
-        <!-- Grid row -->
-        <div class="form-group row">
-            <!-- Default input -->
-            <label for="inputPassword" class="col-sm-2 col-form-label-lg">Password</label>
-            <div class="col-sm-10">
-                <input type="text" asp-for="Password" class="form-control form-control-lg" id="inputPassword" placeholder="Password">
+<div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5 mt-5">
+    <div class="card card-cascade wider">
+      <div class="view gradient-card-header blue-gradient p-3">
+        <h4 class="h2 mb-0">Add Employee</h4>
+      </div>
+      <div class="card-body ">
+        
+        <form class="mt-5 pt-5">
+            <div class="form-group row d-flex">
+                <p class="label col-md-2 pt-2 form-control-lg">Username</p>
+                <div class="col-md-10">
+                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                </div>
             </div>
-        </div>
-        <!-- Grid row -->
 
-        <!-- Grid row -->
-        <div class="form-group row">
-            <div class="col-sm-3 offset-sm-10">
-                <button type="submit" class="btn btn-primary btn-lg">Create employee</button>
-            </div>
-        </div>
-        <!-- Grid row -->
-    </form>
-    <!-- Default horizontal form -->
+            <div class="form-group row d-flex">
+                <p class="label col-md-2 pt-2 form-control-lg">Password</p>
+                <div class="col-md-10">
+                    <input class="form-control pt-0 form-control-lg" id="Title" type="text">
+                </div>
+            </div>        
 
-</section>
+          <div class="text-right mb-5 pb-5">
+            <button class="btn btn-danger waves-light">Cancel</button>
+            <button class="btn success-color-dark waves-light">Create employee</button>
+          </div>
+          
+        </form>
+        
+      </div>
+    </div>
+  </div>
