--- a/Views/Manage/ChangePassword.cshtml
+++ b/Views/Manage/ChangePassword.cshtml
@@ -1,33 +1,40 @@
-                      <div class="row">
-<!-- Default form register -->
-<div class="col-sm-4 offset-sm-4">
-<form>
-    <p class="h4 text-center mb-4">Change password</p>
 
-    <!-- Default input name -->
-    <label for="defaultFormRegisterNameEx" class="grey-text">Current password</label>
-    <input type="text" id="defaultFormRegisterNameEx" class="form-control">
-    
-    <br>
+<div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5 mt-5">
+    <div class="card card-cascade wider">
+      <div class="view gradient-card-header blue-gradient p-3">
+        <h4 class="h2 mb-0">Change password</h4>
+      </div>
+      <div class="card-body ">
+        
+        <form class="mt-5 pt-5">
+            <div class="form-group row d-flex">
+                <p class="label col-md-4 pt-2 form-control-lg">Current password</p>
+                <div class="col-md-8">
+                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                </div>
+            </div>
 
-    <!-- Default input email -->
-    <label for="defaultFormRegisterEmailEx" class="grey-text">New password</label>
-    <input type="email" id="defaultFormRegisterEmailEx" class="form-control">
-    
-    <br>
+            <div class="form-group row d-flex">
+                <p class="label col-md-4 pt-2 form-control-lg">New password</p>
+                <div class="col-md-8">
+                    <input class="form-control pt-0 form-lg form-control-lg" id="Title" type="text">
+                </div>
+            </div>
 
-    <!-- Default input email -->
-    <label for="defaultFormRegisterConfirmEx" class="grey-text">Confirm new password</label>
-    <input type="email" id="defaultFormRegisterConfirmEx" class="form-control">
+            <div class="form-group row d-flex">
+                <p class="label col-md-4 pt-2 form-control-lg">Confirm new password</p>
+                <div class="col-md-8">
+                    <input class="form-control pt-0 form-control-lg" id="Title" type="text">
+                </div>
+            </div>        
 
-    <br>
-
-    <div class="text-center mt-4">
-        <button class="btn btn-unique" type="submit">Cancel</button>
-        <button class="btn btn-unique" type="submit">Change password!</button>
+          <div class="text-right mb-5 pb-5">
+            <button class="btn btn-danger waves-light">Cancel</button>
+            <button class="btn success-color-dark waves-light">Create employee</button>
+          </div>
+          
+        </form>
+        
+      </div>
     </div>
-</form>
-<!-- Default form register -->
-                      </div>
-                      </div>
-                  
+  </div>
