--- a/Views/Manage/Shared/_header.cshtml
+++ b/Views/Manage/Shared/_header.cshtml
@@ -1,5 +1,5 @@
  <!-- SideNav slide-out button -->
-  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse">
+  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0">
       <i class="fa fa-bars"></i>
   </a>
 
