--- a/Views/Shared/_footer.cshtml
+++ b/Views/Shared/_footer.cshtml
@@ -87,7 +87,7 @@
 
       <!--Copyright-->
       <div class="footer-copyright py-3 text-center">
-          © 2018 Copyright:
+          © 2018 Copyright
           <a asp-controller="Home" asp-action="Index"> Book Cave </a>
       </div>
       <!--/.Copyright-->
