--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -1,5 +1,5 @@
  <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar unique-color-dark">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar unique-color-dark wow fadeIn">
     <div class="container">
 
       <!-- Brand -->
