--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-5 mx-auto">
             <!-- Sign Up-->
-            <section class="form-dark">
+            <section class="form-dark wow fadeIn">
 
                 <!-- Form -->
                 <div class="card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table7.jpg'); width: 28rem;">
