--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -5,73 +5,73 @@
         <div class="col-5 mx-auto">
             <!-- Sign Up-->
             <section class="form-dark wow fadeIn">
+                <form asp-action="post" asp-controller="User">
+                    <!-- Form -->
+                    <div class="card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table7.jpg'); width: 28rem;">
+                        <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
 
-                <!-- Form -->
-                <div class="card card-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table7.jpg'); width: 28rem;">
-                    <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
+                            <!-- Header -->
+                            <div class="text-center">
+                                <h3 class="white-text mb-5 mt-4 font-weight-bold"><strong>SIGN</strong> <a class="green-text font-weight-bold"><strong> UP</strong></a></h3>
+                            </div>
 
-                        <!-- Header -->
-                        <div class="text-center">
-                            <h3 class="white-text mb-5 mt-4 font-weight-bold"><strong>SIGN</strong> <a class="green-text font-weight-bold"><strong> UP</strong></a></h3>
-                        </div>
+                            <!--Body-->
+                            <div class="row">
+                                <div class="col">
+                                    <div class="md-form">
+                                        <input type="text" id="FirstName" class="form-control white-text" asp-for="FirstName">
+                                        <label asp-for="FirstName">First Name</label>
+                                    </div>
+                                </div>
 
-                        <!--Body-->
-                        <div class="row">
-                            <div class="col">
-                                <div class="md-form">
-                                    <input type="text" id="FirstName" class="form-control white-text" asp-for="FirstName">
-                                    <label asp-for="FirstName">First Name</label>
+                                <div class="col">
+                                    <div class="md-form">
+                                        <input type="text" id="LastName" class="form-control white-text" asp-for="LastName">
+                                        <label asp-for="LastName">Last Name</label>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col">
-                                <div class="md-form">
-                                    <input type="text" id="LastName" class="form-control white-text" asp-for="LastName">
-                                    <label asp-for="LastName">Last Name</label>
+                            <div class="md-form">
+                                <input type="text" id="Email" class="form-control white-text" asp-for="Email">
+                                <label asp-for="Email">E-mail Adress</label>
+                            </div>
+
+                            <div class="md-form">
+                                <input type="text" id="Password" class="form-control white-text" asp-for="Password">
+                                <label asp-for="Password">Password</label>
+                            </div>
+
+                            <div class="md-form pb-3">
+                                <input type="password" id="ConfirmPassword" class="form-control white-text" asp-for="ConfirmPassword">
+                                <label asp-for="ConfirmPassword">Confirmm Password</label>
+                                <div class="form-check my-4">
+                                    <input class="form-check-input" type="checkbox" value="true" id="TermsAndConditions" asp-for="TermsAndConditions">
+                                    <label class="form-check-label white-text" asp-for="TermsAndConditions">Accept the<a href="#" class="green-text font-weight-bold"> Terms and Conditions</a></label>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="md-form">
-                            <input type="text" id="Email" class="form-control white-text" asp-for="Email">
-                            <label asp-for="Email">E-mail Adress</label>
-                        </div>
+                            <!--Grid row-->
+                            <div class="row d-flex align-items-center mb-4">
 
-                        <div class="md-form">
-                            <input type="text" id="Password" class="form-control white-text" asp-for="Password">
-                            <label asp-for="Password">Password</label>
-                        </div>
-
-                        <div class="md-form pb-3">
-                            <input type="password" id="ConfirmPassword" class="form-control white-text" asp-for="ConfirmPassword">
-                            <label asp-for="ConfirmPassword">Confirmm Password</label>
-                            <div class="form-check my-4">
-                            <input class="form-check-input" type="checkbox" value="false" id="TermsAndConditions" asp-for="TermsAndConditions">
-                            <label class="form-check-label white-text" asp-for="TermsAndConditions">Accept the<a href="#" class="green-text font-weight-bold"> Terms and Conditions</a></label>
+                                <!--Grid column-->
+                                <div class="text-center mb-3 col-md-12">
+                                    <button type="submit" class="btn btn-success btn-block btn-rounded z-depth-1">Sign up</button>
+                                </div>
+                                <!--Grid column-->
                             </div>
-                        </div>
-
-                        <!--Grid row-->
-                        <div class="row d-flex align-items-center mb-4">
+                            <!--Grid row-->
 
                             <!--Grid column-->
-                            <div class="text-center mb-3 col-md-12">
-                                <button type="button" class="btn btn-success btn-block btn-rounded z-depth-1">Sign in</button>
+                            <div class="col-md-12">
+                                <p class="font-small white-text d-flex justify-content-end">Have an account? <a asp-action="Login" class="green-text ml-1 font-weight-bold"> Log in</a></p>
                             </div>
                             <!--Grid column-->
-                        </div>
-                        <!--Grid row-->
 
-                        <!--Grid column-->
-                        <div class="col-md-12">
-                            <p class="font-small white-text d-flex justify-content-end">Have an account? <a asp-action="Login" class="green-text ml-1 font-weight-bold"> Log in</a></p>
                         </div>
-                        <!--Grid column-->
-
                     </div>
-                </div>
-                <!--/Form without header-->
-
+                    <!--/Form without header-->
+                </form>
             </section>
             <!--Section: Live preview-->
         </div>                   
