vinna i startup.cs og usercontroller

--- a/Views/User/SignUp.cshtml
+++ b/Views/User/SignUp.cshtml
@@ -1,4 +1,4 @@
-@model BookCave.Models.InputModels.SignUpInputModel
+@model BookCave.Models.InputModels.UserSignUpInputModel
 
 <div class="container body-container">
     <div class="row">
