--- a/wwwroot/css/dashboard.css
+++ b/wwwroot/css/dashboard.css
@@ -4,3 +4,7 @@
     overflow-y: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+
+.border-top-nav {
+    border-top: 1px solid rgba(153,153,153,.298039);
+}
