--- a/Views/Manage/AddBook.cshtml
+++ b/Views/Manage/AddBook.cshtml
@@ -1,6 +1,6 @@
 @model BookCave.Models.InputModels.BookInputModel
 
-<div class="col-lg-7 col-md-12 offset-lg-2 wow fadeInDown mb-5">
+<div class="col-lg-8 col-md-12 offset-lg-2 wow fadeInDown mb-5">
     <div class="card card-cascade wider">
       <div class="view gradient-card-header blue-gradient p-3">
         <h4 class="h2 mb-0">Add book</h4>
@@ -8,6 +8,24 @@
       <div class="card-body ">
         
         <form>
+
+            <div class="form-inline mt-2 mb-4 row" >
+                <div class="form-check col">
+                    <input class="form-check-input" name="group20" type="radio" id="radio120" checked="checked" value="Paperback">
+                    <label class="form-check-label" for="radio120">Paperback</label>
+                </div>
+
+                <div class="form-check col">
+                    <input class="form-check-input" name="group20" type="radio" id="radio121" value="Hardcover">
+                    <label class="form-check-label" for="radio121">Hardcover</label>
+                </div>
+
+                <div class="form-check col">
+                    <input class="form-check-input" name="group20" type="radio" id="radio122" value="E-book">
+                    <label class="form-check-label" for="radio122">E-book</label>
+                </div>
+            </div>
+
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2">Title</p>
                 <div class="col-md-8">
@@ -16,28 +34,58 @@
             </div>
 
             <div class="form-group row d-flex">
-                <p class="label col-md-4 pt-2">Author</p>
-                <div class="col-md-8">
-                    <input class="form-control pt-0" id="Title" type="text">
-                </div>
-            </div>
-
-            <div class="form-group row d-flex">
-                <p class="label col-md-4 pt-2">Genre</p>
-                <div class="col-md-8">
-                    <select class="mdb-select colorful-select dropdown-primary" multiple>
-                        <option value="" disabled selected>Choose book genre(s)</option>
+                <p class="label col-md-4 pt-2">Author <a asp-controller="manage" asp-action="addauthor" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New author</a></p>
+                <div class="col-md-6">
+                    <select class="mdb-select colorful-select dropdown-primary" multiple searchable="Search here..">
+                        <option value="" disabled selected>Select Author...</option>
                         <option value="1">Fantasy</option>
                         <option value="2">Horror</option>
-                        <option value="1">Non-fiction</option>
+                        <option value="3">Adventure</option>
+                        <option value="3">Fiction</option>
+                        <option value="3">Non-fiction</option>
                     </select>
+                    <button class="btn-save btn btn-primary btn-sm">Save</button>          
+                </div>
+                <div class="col-md-2">
+                <a class="btn btn-outline-info waves-effect btn-sm ">Refresh</a>
                 </div>
             </div>
 
             <div class="form-group row d-flex">
-                <p class="label col-md-4 pt-2">Publisher</p>
-                <div class="col-md-8">
-                    <input class="form-control pt-0" id="Title" type="text">
+                <p class="label col-md-4 pt-2">Genre <a asp-controller="manage" asp-action="addgenre" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New genre</a></p>
+                <div class="col-md-6">
+                    <select class="mdb-select colorful-select dropdown-primary" multiple searchable="Search here..">
+                        <option value="" disabled selected>Select Genre...</option>
+                        <option value="1">Fantasy</option>
+                        <option value="2">Horror</option>
+                        <option value="3">Adventure</option>
+                        <option value="3">Fiction</option>
+                        <option value="3">Non-fiction</option>
+                    </select>
+                    <button class="btn-save btn btn-primary btn-sm">Save</button>          
+                </div>
+
+                                <div class="col-md-2">
+                <a class="btn btn-outline-info waves-effect btn-sm ">Refresh</a>
+                </div>
+            </div>
+
+            <div class="form-group row d-flex">
+                <p class="label col-md-4 pt-2">Publisher <a asp-controller="manage" asp-action="addpublisher" target="_blank" class="btn btn-outline-info waves-effect btn-sm px-2">New publisher</a></p>
+                <div class="col-md-6">
+                    <select class="mdb-select colorful-select dropdown-primary" searchable="Search here..">
+                        <option value="" disabled selected>Select Publisher...</option>
+                        <option value="1">Fantasy</option>
+                        <option value="2">Horror</option>
+                        <option value="3">Adventure</option>
+                        <option value="3">Fiction</option>
+                        <option value="3">Non-fiction</option>
+                    </select>
+                    <button class="btn-save btn btn-primary btn-sm">Save</button>          
+                </div>
+
+                                <div class="col-md-2">
+                <a class="btn btn-outline-info waves-effect btn-sm ">Refresh</a>
                 </div>
             </div>
 
@@ -51,10 +99,17 @@
             </div>
 
             <div class="form-group row d-flex">
+                <p class="label col-md-4 pt-2">Pages</p>
+                <div class="col-md-8">
+                    <input class="form-control pt-0" id="Title" type="text">
+                </div>
+            </div>
+            
+            <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2">Cover Image</p>
 
                 <div class="file-field col-md-8">
-                    <a class="btn-floating purple-gradient mt-0 float-left">
+                    <a class="btn-floating blue-gradient mt-0 float-left btn-sm">
                         <i class="fa fa-cloud-upload" aria-hidden="true"></i>
                         <input type="file" accept="image/*">
                     </a>
@@ -62,195 +117,19 @@
                         <input class="file-path validate form-control pt-0" type="text" placeholder="Upload image" disabled >
                     </div>
                 </div>
-            </div>
+            </div> 
 
-            <hr>
-
-            <div class="form-check mb-3" id="showPaperback">
-                <input type="checkbox" class="filled-in form-check-input" id="includePaperback">
-                <label class="form-check-label" for="includePaperback">Paperback</label>
-            </div>
-
-
-            <div id="paperback" class="collapse">
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">ISBN</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
+            <div class="row">
+                <div>
+                    <input type="button" class="btn btn-primary waves-light" value="Refresh items">
                 </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Publishing Year</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-                
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Font</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>                                
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Page count</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Price</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
+                <div class="text-right">
+                    <button class="btn btn-danger waves-light">Cancel</button>
+                    <input type="submit" class="btn success-color-dark waves-light" value="Add book!">
                 </div>
             </div>
-
-            <hr>
-
-            <div class="form-check mb-3" id="showHardcover">
-                <input type="checkbox" class="filled-in form-check-input" id="includeHardcover">
-                <label class="form-check-label" for="includeHardcover">Hardcover</label>
-            </div>
-
-            <div id="hardcover" class="collapse">
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">ISBN</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Publishing Year</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-                
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Font</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>                                
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Page count</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Price</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="form-check mb-3" id="showEbook">
-                <input type="checkbox" class="filled-in form-check-input" id="includeEbook">
-                <label class="form-check-label" for="includeEbook">E-book</label>
-            </div>
-
-            <div id="ebook" class="collapse">
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">ISBN</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Publishing Year</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-                
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Page count</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Price</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="form-check mb-3" id="showAudioBook">
-                <input type="checkbox" class="filled-in form-check-input" id="includeAudioBook">
-                <label class="form-check-label" for="includeAudioBook">Audio book</label>
-            </div>
-
-            <div id="audioBook" class="collapse">
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">ISBN</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Publishing Year</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>    
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Audio length</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-
-                <div class="form-group row d-flex">
-                    <p class="label col-md-4 pt-2">Price</p>
-                    <div class="col-md-8">
-                        <input class="form-control pt-0" id="Title" type="text">
-                    </div>
-                </div>
-            </div>
-
-            <hr>
-
-
-
-
-
-
-
-
-
-
-
-        
-
-
-        
-            
-        
-
-          <div class="text-right">
-            <button class="btn btn-danger waves-light">Cancel</button>
-            <button class="btn success-color-dark waves-light">Add book</button>
-          </div>
           
+        
         </form>
         
       </div>
